syntax = "proto3";

package hex_s;  

option go_package = "generated/hex_s"; 

service HexS {  
    rpc AddRecord (AddRecordRequest) returns (AddRecordResponse);
    rpc DeleteRecord (DeleteRecordRequest) returns (DeleteRecordResponse);
    rpc RenameRecord (RenameRecordRequest) returns (RenameRecordResponse);
    rpc UpdateRecordValue (UpdateRecordRequest) returns (UpdateRecordResponse);
    rpc GetData (GetDataRequest) returns (GetDataResponse);
}

message AddRecordRequest {
    string region = 1;
    string product = 2;
    string value = 3;

}

message AddRecordResponse {
    repeated int32 vector_clock = 1;
}

message DeleteRecordRequest {
    string region = 1;
    string product = 2;
}

message DeleteRecordResponse {
    repeated int32 vector_clock = 1;
}

message RenameRecordRequest {
    string region = 1;
    string OldProduct = 2;
    string NewProduct = 3;
}

message RenameRecordResponse {
    repeated int32 vector_clock = 1;
}

message UpdateRecordRequest {
    string region = 1;
    string product = 2;
    string new_value = 3;
}

message UpdateRecordResponse {
    repeated int32 vector_clock = 1;
}

message GetDataRequest {
  string region = 1;
  string product = 2;
}

message GetDataResponse {
  repeated int32 vector_clock = 1;
  int32 quantity = 2;
}
